<resources>
    <string name="app_name">LeafStoneScissorsTcom</string>
    <string name="imagebackground">imageBackground</string>
    <string name="rook">Rook</string>
    <string name="leaf">Leaf</string>
    <string name="sccissors">Sccissors</string>
    <string name="logging">LOG IN</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="no_account_register_now">No Account ? Register Now</string>
    <string name="login">Login</string>
    <string name="registering">REGISTER</string>
    <string name="emailRegister">Email...</string>
    <string name="nickname">Nickname...</string>
    <string name="passwordRegister">Password...</string>
    <string name="repeat_password">Repeat password...</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login_now">Already have an account? Login now</string>
    <string name="start_game">Start game</string>
    <string name="welcome">Welcome</string>
    <string name="player_2">Player 2:</string>
    <string name="player_1">Player 1:</string>
    <string name="vs">VS</string>
    <string name="grgrgr">-</string>
    <string name="_0">0</string>
    <string name="go">GO</string>
    <string name="___8">8</string>
    <string name="pick">PICK</string>
    <string name="waiting_for_second_player">Waiting for second player...</string>
    <string name="close">Close</string>
    <string name="player_one">Player one</string>
    <string name="player_two">Player two</string>
    <string name="analyze">Analyze</string>
    <string name="___0">0</string>
    <string name="____0">0</string>
    <string name="rematch">Rematch</string>
    <string name="new_game">New Game</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tokens">Tokens</string>
    <string name="connecting">Connecting ...</string>
</resources>