<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_info.RegisterActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:background="#021155"
        android:text="@string/registering"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmailRegister"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/emailRegister"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="#021155"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegister" />

    <EditText
        android:id="@+id/editTextNicknameRegister"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/nickname"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="#021155"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailRegister" />

    <EditText
        android:id="@+id/editTextPasswordRegister"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/passwordRegister"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:background="#021155"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailRegister"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextNicknameRegister" />

    <EditText
        android:id="@+id/editTextPasswordRepeatRegister"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:background="#021155"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailRegister"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegister" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="#021155"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordRegister"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRepeatRegister" />

    <TextView
        android:id="@+id/textViewLoginNow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/already_have_an_account_login_now"
        android:textColor="#FFFFFFFF"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>