<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#236F49"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="26dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/playerOneName"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/player_1"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/textViewVS"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/vs"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/playerTwoName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/player_2"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linearNames"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/playerOneScore"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/_0"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/playerBetweenScore"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:text="@string/grgrgr"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/playerTwoScore"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/_0"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/imageViewBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearScore"
        android:textSize="36sp"
        android:textColor="#FBEF02"
        android:text="@string/___8"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/imageViewBackground"
        android:contentDescription="@string/imagebackground"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/image"
        app:layout_constraintBottom_toTopOf="@id/buttonChoose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearScore">

    </ImageView>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/buttonChoose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearScore" >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/imageStone"
            android:contentDescription="@string/rook"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:background="#3AC6B636"
            app:layout_constraintEnd_toEndOf="@id/imageViewBackground"
            app:layout_constraintStart_toStartOf="@id/imageViewBackground"
            app:layout_constraintTop_toTopOf="@id/imageViewBackground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageStone">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/imageLeaf"
                android:contentDescription="@string/leaf"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="#3AC6B636"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewBackground"
                app:layout_constraintEnd_toEndOf="@id/imageSccissors"
                app:layout_constraintStart_toStartOf="@id/imageViewBackground"
                app:layout_constraintTop_toTopOf="@id/imageStone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/imageSccissors"
                android:contentDescription="@string/sccissors"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="#3AC6B636"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewBackground"
                app:layout_constraintStart_toStartOf="@id/imageLeaf"
                app:layout_constraintTop_toTopOf="@id/imageStone" />

        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="46dp"
        android:textStyle="bold"
        android:background="#45C299"
        android:textSize="26sp"
        android:text="@string/pick"/>


</androidx.constraintlayout.widget.ConstraintLayout>