<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/logging"
        android:textColor="@color/white"
        android:background="#021155"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmailLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textSize="22sp"
        android:background="#021155"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin" />

    <EditText
        android:id="@+id/editTextPasswordLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:inputType="textPassword"
        android:background="#021155"
        android:importantForAutofill="no"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailLogin"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailLogin" />

    <TextView
        android:id="@+id/textViewRegisterNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="187dp"
        android:backgroundTint="#000000"
        android:textSize="17sp"
        android:text="@string/no_account_register_now"
        android:textColor="#FFFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLogin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/login"
        android:background="#021155"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordLogin"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>