<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/textViewTokens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tokens"
        app:layout_constraintBottom_toTopOf="@+id/textViewWelcomePlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        android:textSize="22sp"
        android:background="#021155"
        android:textColor="@color/white"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textViewWelcomePlayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#021155"
        android:textColor="@color/white"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:textSize="22sp"
        android:gravity="center"
        android:text="@string/welcome"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart1v1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonStart1v1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="#021155"
        android:textColor="@color/white"
        android:text="@string/start_game"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonStartGroupComp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewWaitPlayer"
        android:layout_marginTop="24dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="#021155"
        android:textColor="@color/white"
        android:text="Start group comp"/>

    <TextView
        android:id="@+id/textViewWaitPlayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="18dp"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/waiting_for_second_player"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonStart1v1" />

    <TextView
        android:id="@+id/textViewConnecting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        android:text="@string/connecting"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonStartGroupComp" />

</androidx.constraintlayout.widget.ConstraintLayout>